<resources>
    <string name="app_name">MyFlexibleFragment</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="this_profile">Ini activity Profile</string>
    <string name="this_category">Ini fragment Category</string>
    <string name="category_lifestyle">Ke fragment Lifestyle</string>
    <string name="category_name">Category Name</string>
    <string name="category_description">Category Description</string>
    <string name="to_profile">Ke Halaman Profile Activity</string>
    <string name="show_dialog">Tampilkan Sebuah dialog</string>
    <string name="hello_home_fragment">Hello Ini Home Fragment</string>
    <string name="to_category">Ke fragment Category</string>
    <string name="question_millionare">Siapa Orang Terkaya di Dunia?</string>
    <string name="jeff_bezos">Jeff Bezos</string>
    <string name="amancio_ortega">Amancio Ortega</string>
    <string name="bill_gates">Bill Gates</string>
    <string name="warren_buffett">Warren Buffett</string>
    <string name="mark_zuckerberg">Mark Zuckerberg</string>
    <string name="choose">Pilih</string>
    <string name="close">Tutup</string>
</resources>